# pg_bm25.rs

./: .gitignore  .typos.toml  Cargo.toml  README.md  pg_bm25.control  rust-toolchain.toml  tokenizer.md  vchord_bm25.control
.github/workflows/: rust.yml  update_vendor.yml
licenses/: LICENSE.AGPLv3
scripts/: update_vendor.sh
src/: bm25query.rs  bm25weight.rs  builder.rs  field_norm.rs  guc.rs  lib.rs  options.rs  payload.rs  term_info.rs  token.rs  weight.rs
src/algorithm/: block_wand.rs  mod.rs
src/algorithm/block_encode/: delta_bitpack.rs  elias_fano.rs  mod.rs
src/algorithm/block_partition/: fixed_block_partition.rs  mod.rs  variable_block_partition.rs
src/datatype/: binary_bm25vector.rs  functions.rs  memory_bm25vector.rs  mod.rs  text_bm25vector.rs
src/index/: am.rs  build.rs  delete.rs  insert.rs  mod.rs  options.rs  scan.rs  vacuum.rs
src/page/: builder.rs  meta.rs  mod.rs  postgres.rs  reader.rs  virtual.rs  writer.rs
src/postings/: mod.rs  reader.rs  serializer.rs  writer.rs
src/segment/: builder.rs  delete.rs  field_norm.rs  growing.rs  meta.rs  mod.rs  payload.rs  sealed.rs  term_stat.rs
src/segment/posting/: append.rs  mod.rs  reader.rs  serializer.rs  writer.rs
src/segments/: growing.rs  meta.rs  mod.rs  sealed.rs
src/sql/: bootstrap.sql  finalize.sql  tokenizer.sql
src/utils/: cells.rs  compress_block.rs  mod.rs  topk_computer.rs  vint.rs
tests/: README.md  init.sql
tests/sqllogictest/: brute_force.slt  delete.slt  elias_fano.slt.wip  empty.slt  index.slt  temp.slt  tokenizer.slt  unicode_tokenizer.slt  unlogged.slt  variable_block.slt
tools/: pg_config.sh
