[package]
name = "pg_bm25"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.6.0"
bitpacking = { version = "0.9", default-features = false, features = [
    "bitpacker4x",
] }
bytemuck = "1.18"
lazy_static = "1.5"
pgrx = { version = "=0.12.5", default-features = false, features = [] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
stop-words = "0.8.0"
tantivy-stemmers = { version = "0.4.0", features = [
    "default",
    "english_porter",
] }
thiserror = "1.0.64"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[dev-dependencies]
rand = "0.8"

[patch.crates-io]
pgrx = { git = "https://github.com/tensorchord/pgrx.git", branch = "v0.12.5-patch" }

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[lints.clippy]
missing_safety_doc = "allow"
new_without_default = "allow"
not_unsafe_ptr_arg_deref = "allow"
