[package]
name = "vchord_bm25"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.6.0"
bitpacking = { version = "0.9", default-features = false, features = [
    "bitpacker4x",
] }
bitvec = "1.0.1"
broadword = "0.2.2"
bytemuck = "1.18"
enum_dispatch = "0.3.13"
lazy_static = "1.5"
pgrx = { version = "=0.12.9", default-features = false, features = ["cshim"] }
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
stop-words = "0.8.0"
tantivy-stemmers = { version = "0.4.0", features = [
    "default",
    "english_porter",
] }
thiserror = "2"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
toml = "0.8.19"
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 3
lto = "thin"
codegen-units = 8

[lints.clippy]
missing_safety_doc = "allow"
new_without_default = "allow"
not_unsafe_ptr_arg_deref = "allow"
